--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vk77492.bigbasketclone" >
+    package="com.vk77492.bigbasketclone">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,12 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BigBasketClone" >
+        android:theme="@style/Theme.BigBasketClone">
+        <activity android:name=".ProductsListActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_bottom_navigations" >
-        </activity>
-        <activity android:name=".BottomNavigation" >
+            android:label="@string/title_activity_bottom_navigations" />
+        <activity android:name=".BottomNavigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
