--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BigBasketClone">
-        <activity android:name=".ProductsListActivity"></activity>
+        <activity android:name=".LoginRegisterActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ProductActivity" />
+        <activity android:name=".ProductsListActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_bottom_navigations" />
