--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BigBasketClone">
-        <activity android:name=".LoginRegisterActivity"></activity>
+        <activity android:name=".OrderPacedActivity"></activity>
+        <activity android:name=".BottomNavigation" />
+        <activity android:name=".CheckoutActivity" />
+        <activity android:name=".LoginRegisterActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ProductActivity" />
         <activity android:name=".ProductsListActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_bottom_navigations" />
-        <activity android:name=".BottomNavigation">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
